Squashing Bugs! # Enabled Fullscreen Mode! # Fixed the height of the frame-bar!

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -101,6 +101,7 @@ body {
   background-color: #2E51A2;
   color: #EEEEEE;
   border-radius: 0 0 8px 8px;
+  z-index: 7;
 }
 
 .card {
@@ -150,10 +151,12 @@ body {
 
 #frame-bar {
   -webkit-app-region: drag;
-  height: 24px;
+  height: 32px;
   background-color: #2E51A2;
   padding: none;
   margin: 0px;
+  z-index: 3001;
+  top: 0px;
 }
 
 #frame-bar-btns {
